--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,20 @@
 {
   "manifest_version": 3,
-  "name": "AI Summary for Articles",
-  "version": "1.0",
-  "permissions": ["scripting", "activeTab", "storage"],
+  "name": "AI Article Summarizer",
+  "version": "1.2",
+  "description": "Summarize articles using Gemini AI",
+  "permissions": ["activeTab", "storage", "scripting"],
   "action": {
     "default_popup": "popup.html",
-    "default_icon": "icon.png"
-  },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"]
+    "default_icon": {
+      "16": "icon.png",
+      "48": "icon.png",
+      "128": "icon.png"
     }
-  ],
-  "background": {
-    "service_worker": "background.js"
   },
-  "options_page": "options.html",
-  "host_permissions": ["<all_urls>"]
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": false
+  },
+  "host_permissions": ["https://generativelanguage.googleapis.com/*"]
 }
